# CMake-Trial

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  MathFunctionsTargets.cmake  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Tutorial.sln  Tutorial.vcxproj  Tutorial.vcxproj.filters  TutorialConfig.h  TutorialConfig.h.in  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  tutorial.cxx
Debug/: MathFunctions.exp  SqrtLibrary.lib
MathFunctions/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MakeTable.vcxproj  MakeTable.vcxproj.filters  MathFunctions.cxx  MathFunctions.vcxproj  MathFunctions.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SqrtLibrary.vcxproj  cmake_install.cmake  mysqrt.cxx  mysqrt.h
MathFunctions/Debug/: MathFunctions.lib
MathFunctions/MakeTable.dir/Debug/: MakeTable.exe.recipe  MakeTable.ilk
MathFunctions/MakeTable.dir/Debug/MakeTable.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MathFunctions/MathFunctions.dir/Debug/: MathFunctions.dll.recipe  MathFunctions.ilk
MathFunctions/MathFunctions.dir/Debug/MathFunctions.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  MathFunctions.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
MathFunctions/SqrtLibrary.dir/Debug/SqrtLibrary.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Testing/: TAG
Testing/20230404-0837/: Build.xml  Configure.xml  Done.xml  Test.xml
Testing/Temporary/: CTestCostData.txt
Tutorial.dir/Debug/: Tutorial.exe.recipe  Tutorial.ilk
Tutorial.dir/Debug/Tutorial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
_CPack_Packages/win64/ZIP/Tutorial-1.0-win64/include/: MathFunctions.h  TutorialConfig.h
_CPack_Packages/win64/ZIP/Tutorial-1.0-win64/lib/: MathFunctions.lib  SqrtLibrary.lib
_CPack_Packages/win64/ZIP/Tutorial-1.0-win64/lib/cmake/MathFunctions/: MathFunctionsTargets-debug.cmake
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
